IronEngineer/force-app/main/default/objects/Location__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>