IronEngineer/force-app/main/default/objects/Location__c/fields/State_Province__c.field-meta.xml
<CustomField>
    <fullName>State_Province__c</fullName>
    <label>State/Province</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>